[package]
name = "tread"
version = "0.1.0"
edition = "2024"

[dependencies]
flagge = { git = "https://github.com/khsaad04/flagge.git", version = "0.1.0" }
material-colors = { version = "0.4.2", features = ["image"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
upon = "0.10.0"
